@@ -5,7 +5,6 @@ import org.springframework.stereotype.Repository;
 import sk.tany.rest.api.domain.AbstractInMemoryRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 public class BlogRepository extends AbstractInMemoryRepository<Blog> {
@@ -17,6 +16,6 @@ public class BlogRepository extends AbstractInMemoryRepository<Blog> {
     public List<Blog> findAllByVisibleTrue() {
         return memoryCache.values().stream()
                 .filter(Blog::isVisible)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
