@@ -9,7 +9,6 @@ import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Repository
 public class ReviewRepository extends AbstractInMemoryRepository<Review> {
@@ -21,7 +20,7 @@ public class ReviewRepository extends AbstractInMemoryRepository<Review> {
     public List<Review> findAllByProductId(String productId) {
         return memoryCache.values().stream()
                 .filter(r -> r.getProductId() != null && r.getProductId().equals(productId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Review> findAllByProductId(String productId, Sort sort) {
@@ -34,7 +33,7 @@ public class ReviewRepository extends AbstractInMemoryRepository<Review> {
         Set<String> idsSet = new HashSet<>(productIds);
         return memoryCache.values().stream()
                 .filter(r -> r.getProductId() != null && idsSet.contains(r.getProductId()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Review> findAllByProductIds(Collection<String> productIds, Sort sort) {
