@@ -43,7 +43,7 @@ class CarrierClientControllerTest {
         Page<CarrierDto> result = carrierClientController.getCarriers(pageable);
 
         assertEquals(1, result.getTotalElements());
-        assertEquals("Test Carrier", result.getContent().get(0).getName());
+        assertEquals("Test Carrier", result.getContent().getFirst().getName());
         verify(carrierService, times(1)).findAll(pageable);
     }
 }
