@@ -50,7 +50,7 @@ class PaymentAdminControllerTest {
         Page<PaymentDto> result = paymentAdminController.getPayments(pageable);
 
         assertEquals(1, result.getTotalElements());
-        assertEquals("Test Payment", result.getContent().get(0).getName());
+        assertEquals("Test Payment", result.getContent().getFirst().getName());
         verify(paymentService, times(1)).findAll(pageable);
     }
 
